[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "differential-privacy"
version = "0.1.0"
description = "Differential Privacy Machine-Learning Pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "imbalanced-learn",
    "matplotlib",
    "keras",
    "tensorflow",
    "fairlearn",
]

[project.optional-dependencies]
experimental = [
    "torch",
    "opacus",
    "autodp",
    "tabulate",
    "ipython",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
