[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "differential-privacy"
version = "0.1.0"
description = "Differential Privacy Machine-Learning Pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23.5,<2.0",
    "pandas>=1.5.3,<2.5",
    "scipy>=1.10.0,<1.11",
    "scikit-learn>=1.3.0,<1.4",
    "imbalanced-learn>=0.11.0,<0.12",
    "keras>=2.13.0,<2.14",
    "tensorflow>=2.13.0,<2.14",
    "fairlearn>=0.8.0,<0.9",
    "matplotlib>=3.7.0,<3.8",
]

[project.optional-dependencies]
experimental = [
    "torch>=2.0.0,<2.1",
    "opacus>=1.4.0,<1.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jupyter>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dp --cov-report=term --cov-report=html"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/dp"]
omit = ["*/tests/*"]
